--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               It is a webpage about my hobby, Cosplay. It is finished in 2017 and is a simple project for a beginner.
             </p>
             <a href="./assets/About Cosplay/Webpage/index.html" class="btn btn-dark rounded" target="_blank">
-              Hava a look
+              Have a look
             </a>
           </div>
         </div>
