--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     </div>
     <!-- Projects here -->
     <div class="portfolio p-5 d-flex justify-content-center flex-column" id="project">
-      <h2 class="p-5 wow animate__animated animate__flipInY animate__slow">Portfolio</h2>
+      <h2 class="p-5 wow animate__animated animate__flipInY animate__slow">Projects</h2>
       <div class="row text-dark d-flex justify-content-center">
         <div class="card col-md-12 col-xl-3 m-3 wow animate__animated animate__zoomInUp animate__slow">
           <img src="./assets/images/card1.png" class="card-img-top my-3" alt="...">
